fixed sidebar board highlight and add new list button spacing

--- a/src/styles/_task-list.scss
+++ b/src/styles/_task-list.scss
@@ -90,6 +90,7 @@
 }
 .add-a-card-button-list {
   color: #f8f5f5;
+  padding: 12px;
   background-color: #ffffff3d;
 }
 .add-a-card-button-list:hover {
